# pybadcomments

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-package.yml
src/pybadcomments/: __init__.py  __main__.py  comment_violations.py  config.py  options.py  processors.py  runner.py
src/pybadcomments/analysers/: base.py  hash_comment_analyser.py
src/pybadcomments/files/: __init__.py  discovery.py  parser.py
tests/: conftest.py  test_parsing.py
tests/analysers/: test_hash_comment_analyser.py
tests/files/: test_discovery.py
tests/samples/: complaint.py  fudge.py
