# pyproject.toml!

[build-system]
requires = ['setuptools>=64.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'pybadcomments'
description = 'The linter to detect undesirable words and phrases in comments.'
requires-python = '>=3.8'
dynamic = ['version']

[tools.setuptools.dynamic]
version = {attr = 'pybadcomments.__version__'}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 88
profile = 'black'

[tool.pylint]
max-line-length = 88
disable = ['C0114', 'C0116', 'W0631', 'R0903', 'C0115']

[tool.pybadcomments]
words = ['fudge', 'terrible', 'hotfix', 'small bug', 'bad example', 'oxymoron']
